# findfire

./: .clang-format  .gitignore  Cargo.toml  Doxyfile  README.md  makefile
Python/: 2022CalfCanyonAndHermittPeak.ipynb  Demo.ipynb  environment.yml  satfire.py
SQL/: AllSubFires.sql  NumFireMergers.sql
external_sql/: SummaryStats.sql  TotalPower.sql
mains/: connectfire.c  currentfire.c  dumpf.c  findfire.c  showfire.c
src/: add_row_statement.sql  cluster.c  cluster.h  cluster.rs  cluster_database.rs  courier.h  create_db.sql  database.c  database.h  database.rs  error.rs  find_latest.sql  fire.rs  fire_database.rs  firepoint.c  firepoint.h  firepoint.rs  firesatimage.c  firesatimage.h  firesatimage.rs  geo.c  geo.h  geo.rs  kamel.c  kml.rs  lib.rs  main.c  main.rs  pixel.rs  satellite.c  satellite.h  satellite.rs  satfire.c  satfire.h  sf_cluster.c  sf_database.c  sf_fire.c  sf_firesatimage.c  sf_geo.c  sf_private.h  (+5 more)
src/cluster/: cluster.rs  cluster_list.rs  cluster_record.rs
src/cluster_database/: add_cluster.sql  create_cluster_db.sql  db_clusters.rs  get_clusters.sql
src/database/: add_association.sql  add_cluster.sql  add_fire.sql  add_no_cluster.sql  add_no_fire_cluster.sql  create_cluster_db.sql  create_db.sql  create_fire_db.sql  query_most_recent_fires.sql  query_newest_cluster.sql  query_no_clusters.sql  query_no_fires.sql  query_num_clusters_present.sql  single_fire_clusters_time_series.sql
src/fire_database/: add_association.sql  add_cluster.sql  add_fire.sql  create_db.sql  create_fires_db.sql  db_cluster_fire_associations.rs  db_clusters.rs  db_fires.rs  find_latest_cluster.sql  get_clusters.sql  query_fires.sql
src/geo/: hilbert_rtree.rs
tests/: test.c  test.rs
