[package]
name = "satfire"
version = "0.1.0"
authors = ["Ryan Leach"]
description = "Tools for working with fire data charactarization files from NOAA."
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.19"
clap = {version="^3.1.0", features=["derive", "cargo", "env"]}
crossbeam-channel = "^0.5.2"
once_cell = "1.9.0"
rusqlite = {version="^0.27.0", features=["blob", "chrono"]}
rustc-hash = "^1.1.0"
static_assertions = "1.1.0"
strum = { version="^0.24.0", features=["derive"] }
walkdir = "^2.3.2"
zip = "^0.6.1"
