[package]
name = "satfire"
version = "0.2.0"
authors = ["Ryan Leach"]
description = "Tools for working with fire data charactarization files from NOAA."
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.19"
clap = {version="^3.1.0", features=["derive", "cargo", "env"]}
crossbeam-channel = "^0.5.2"
libc = "^0.2"
log = {version="^0.4.16", features=["max_level_debug", "release_max_level_info"]}
once_cell = "1.9.0"
num_cpus = "^1.13.1"
rusqlite = {version="^0.29.0", features=["blob", "chrono"]}
rustc-hash = "^1.1.0"
simple_logger = {version="^4.1.0", default-features=false}
static_assertions = "1.1.0"
strum = { version="^0.24.0", features=["derive"] }
walkdir = "^2.3.2"
zip = "^0.6.1"
